@@ -38,6 +38,10 @@ enum {
   kFeatureTypeBit = 12,
   kFeatureReductionBit = 8,
   kFeatureBit = 0,
+
+  // Mark where the function and module features begin
+  kFuncFeaturesBegin     = 0x1000,
+  kModuleFeaturesBegin   = 0x2000,
 };
 
 
@@ -61,7 +65,7 @@ enum : unsigned {
 namespace FunctionFeature {
 enum : unsigned {
   // General function features
-  kArgCount,
+  kArgCount = kFuncFeaturesBegin,
   kCyclomaticComplexity,
   kCFGEdges,
   kCFGAbnormalEdges,
@@ -134,7 +138,7 @@ enum : unsigned {
 namespace ModuleFeature {
 enum : unsigned {
   // General module features
-  kFunctions,
+  kFunctions = kModuleFeaturesBegin,
   kSCCs,
   kFuncRetInt,
   kFuncRetFloat,
