@@ -1,3 +1,8 @@
+2017-02-22  Edward Jones  <ed.jones@embecosm.com>
+
+	* Features.h: Distinquish between FunctionFeature and ModuleFeatures
+	again, to help with debug.
+
 2017-01-25  Edward Jones  <ed.jones@embecosm.com>
 
 	* Plugin.cpp: Use a mangled name for functions in the feature
